--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
       <header>
         <div class="brand">
           <div class="brand-icon">
-            <img src="agent_assist.png" alt="Agent Assist logo"/>
+            <img src="/static/agent_assist.png" alt="Agent Assist logo"/>
           </div>
           <div class="brand-text">
             <h1>Agent Assist</h1>
